yoshimi 1.3.x

2015-3-22 Will
- Rationalised MIDI volume control
- Implemented MIDI volume control range setting
- Implemented missing resets in 'Reset All Controllers'

2015-3-18 Will
- Pulled remaining program change gui calls into gui thread
- Root path window now correctly tracks 'save' changes

2015-3-15 Will
- Used new gui updating so that MIDI volume and pan changes
  are shown in both the main and panel windows

2015-3-15 Andrew
- Added asynchronous gui update ability from arbitrary threads

2015-3-12 Will
- inserted missing ";" at line 60 of yoshimi.ttl
  found by Holger Marzen

2015-3-10 Will
- Panel window bugfix

yoshimi 1.3.3

2015-3-2 Will
- Added patch from Jakub Cajka to furthur nail asString ambiguities
- Added SVG icon image (renamed alternative)
- Set up for release

2015-2-27 Will
- Added and updated Docs & Images
- Prepared for full release

2015-2-27 Andrew
- Updated splash screen

2015-2-19 Will
- Small gui code optimisations
- Removed some confusing, duplicate, redundant & disabled code

2015-2-18 Will
- Implemented bank rename
- Added gui buttons for this and instrument renames
- Close on selection now righthand mouse button
- bug was slowing down bank swaps -fixed

2015-2-16 Will
- Added middle button close of banks and instruments
  as if auto close has been set

2015-2-15 Will
- Implemented bank complete removal

2015-2-14 Will
- Bank swaps/ID changes now in place
  but not checked for unwritable locations
- Now checked
- Added highlighing of current bank
- Implemented adding banks
- Corrected bugs in bank swaps

2015-2-13 Will
- Basic structure complete and working
  but changing IDs etc. not yet implemented

2015-2-12 Will
- Developed window selection/swapping and forward link from config
- Fixed bug that created empty banks
- Added format string to 3 fltk alert calls to silence gcc warnings

2015-2-6 Will
- Unified root bank instrument log messages
- Updated MIDI test files

2015-2-3 Andrew
- Fix png image creation on fltk < 1.3
